--- a/css/styles.css
+++ b/css/styles.css
@@ -395,7 +395,7 @@ img {
 @media screen and (min-width: 768px) {
   .hero {
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(47, 47, 66, 0.7)),
-      url(../images/hero-bg-tablet@2x.webp);
+      url(../images/hero-bg-tablet.webp);
   }
 }
 @media screen and (min-width: 768px) and(min-device-pixel-ratio: 2) {
